Added JsonIgnoreProperties annotation in Company and Job services

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.url=jdbc:h2:mem:test
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
+//actuator
+management.endpoints.web.exposure.include=*
+
+
